carga de imagenes

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=admin
 DB_NAME=peliculasdb
 SECRET_KEY=key123
+IMGUR_CLIENT_ID=9f326485dbd1a78
