conexion de app al index

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=admin
-DB_NAME=peliculasdb
+DB_PASSWORD=root
+DB_NAME=peliculasDB
 SECRET_KEY=key123
 IMGUR_CLIENT_ID=e6603891cdabf15
